--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "@nuxt/icon": "^1.11.0",
     "@nuxt/image": "^1.9.0",
     "@pinia/nuxt": "^0.10.1",
+    "@vueuse/core": "^13.4.0",
     "axios": "^1.8.3",
     "eslint": "^9.22.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "nuxt": "^3.16.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.7.16"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.12"
   }
 }
